cmake_minimum_required(VERSION 3.1)

project(EffectViewer LANGUAGES CXX)
set(CMAKE_PREFIX_PATH ${QT5_PATH})
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt5 REQUIRED Core Quick)
aux_source_directory(. src_list)
include_directories(../engine)
add_subdirectory(../engine engine.dir)
add_executable(${PROJECT_NAME} ${src_list} "qml.qrc")
target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Core Qt5::Quick CharmEngine GL)
